# hft-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: benchmark.hpp  live_websocket_source.hpp  log_utils.hpp  market_data_source.hpp  replay_source.hpp  source_factory.hpp  time_utils.hpp  tob_ring_buffer.hpp
include/runtime/: curl_global_guard.hpp
proto/: market_data.proto
scripts/: dev.sh
src/: benchmark.cpp  live_websocket_source.cpp  main.cpp  replay_source.cpp  source_factory.cpp  tob_ring_buffer.cpp
strategy_engine/: Cargo.toml  build.rs
strategy_engine/src/: lib.rs
